app/styles/app.scss
/* ... */
.ward-beds-top-bar {
  display: flex;
  flex-wrap: wrap;
  max-width: 876px;
  margin: auto;
  padding: 1rem;
  align-items: center;

  p {
    margin-top: 1rem;
    flex-basis: 100%;
  }

  .header {
    font-size: 1.5rem;
    font-weight: 600;
    flex-grow: 1;
  }

  .link-button {
    border-radius: 4px;
    background-color: white;
    height: 48px;
    width: 124px;
    text-align: center;
    line-height: 3.2;
    text-decoration: none;
    color: #005eb8;
    border: 1px solid rgba(0, 0, 0, 0.2);
  }
}

.table {
  max-width: 876px;
  margin: auto;
  overflow-x: scroll;
  font-size: 0.75rem;

  .header {
    display: inline-flex;
    white-space: nowrap;
    justify-content: space-between;
    height: 48px;
    background-color: #003e78;
    border-bottom: 2px solid #2c98ff;

    @media (min-width: 736px) {
      width: 100%;
      border-bottom: none;
    }

    &--wards {
      background-color: #005eb8;
      justify-content: space-between;
      padding: 1rem;
      width: calc(100% - 2rem);

      .header--column {
        font-size: 1rem;
        line-height: 1.8;
        flex-basis: 50%;
      }
    }

    &--column {
      font-size: .75rem;
      width: 5rem;
      color: white;
      line-height: 3;
      height: 40px;
      padding-top: 8px;

      &.centered {
        text-align: center;
      }

      &.availability {
        &-1 {
          position: absolute;
          width: 5.75rem;
          padding-left: .5rem;
          background-color: #003e78;
          border-right: 2px solid #2c98ff;
          z-index: 1;

          img {
            padding-left: 2.25rem;
          }

          @media (min-width: 736px) {
            border-right: none;
          }
        }
        &-2 {
          width: 4.5rem;
          margin-left: 6.75rem;

          @media (min-width: 736px) {
            width: 5rem;
            margin-left: 4.75rem;
          }
        }
      }

      &.sex, &.day {
        width: 2.5rem;
        min-width: 2.5rem;
      }

      &.rrt, &.covid-status, &.vent {
        width: 7rem;
        min-width: 7rem;
      }
      &.rrt, &.vent {
        text-align: left;
      }

      .icon {
        max-height: 18px;
        width: 25px;
        position: relative;
        top: 0.2rem;
        padding-right: .25rem;
      }
    }
  }

  &_card {
    display: flex;
    justify-content: space-between;
    height: 42px;
    background-color: white;

    @media (min-width: 736px) {
      border-bottom: 2px solid #d8d8d8;
    }

    .bed-number {
      height: 24px;
      padding: .5rem;
      position: absolute;
      background-color: white;
      z-index: 1;
      border-bottom: 2px solid #d8d8d8;
      font-size: 12px;
      line-height: 2;
      min-width: 3.5rem;

      @media (min-width: 736px) {
        border-bottom: none;
      }
    }

    .column {
      font-size: .75rem;
      display: inline-flex;
      height: 24px;
      line-height: 2;
      min-width: 5rem;
      padding: .5rem 0;
      border-bottom: 2px solid #d8d8d8;

      @media (min-width: 736px) {
        border-bottom: none;
      }

      &.availability {
        &-1 {
          position: absolute;
          min-width: 2rem;
          width: 2rem;
          background-color: white;
          border-right: 2px solid #2c98ff;
          padding-left: 0;
          left: 4.25rem;
          z-index: 1;

          @media (min-width: 736px) {
            position: relative;
            border-right: none;
          }
        }
        &-2 {
          min-width: 4.5rem;
          width: 4.5rem;
          margin-left: 6.25rem;
          padding-left: 8px;

          @media (min-width: 736px) {
            min-width: 0;
            width: 5rem;
            margin-left: 2.25rem;
          }
        }
      }

      &.sex, &.day {
        width: 2.5rem;
        min-width: 2.5rem;
      }

      &.rrt, &.covid-status, &.vent {
        width: 7rem;
        min-width: 7rem;
        line-height: 1;
        display: flex;
        align-items: center;
      }

      &.rrt, &.vent {
        .text {
          text-align: left;
        }
      }

      &.initials {
        text-transform: uppercase;
      }

      .text {
        width: 100%;
        text-align: center;
        font-size: 12px;
      }

      .icon {
        min-width: 26px;
        padding-right: .2rem;

        &.tick {
          min-width: 18px;
          max-height: 18px;
          padding-left: 0.5rem;
        }

        &.covid-status-table {
          @media (max-width: 767px) {
            position: relative;
            top: .3rem;
            max-height: 14px;
            width: 14px;
          }
        }
      }
    }
  }
}

.add-beds, .edit-ward {
  position: relative;
  padding: 2rem;
  max-width: 876px;
  margin: auto;

  .results {
    margin-top: 1rem;
    background-color: #f6f6f6;
    font-weight: 600;

    &--hidden {
      visibility: hidden;
    }

    & span {
      font-size: 0.75rem;
      color: #333333;
    }

    &_range {
      color: #003e78;
    }
  }

  .btns-container {
    margin-top: 0;
  }

  h1 {
    font-size: 1.5rem;
    font-weight: 600;
  }

  p {
    margin-top: 0.5rem;
  }

  label {
    margin-top: 2rem;
  }

  input {
    margin: 0.5rem 0;
  }

  button {
    margin-top: 2rem;
  }

  .help-text {
    font-size: 0.75rem;
    color: #737373;
  }

  .error {
    color: #e30a0a;
  }
}
/* ... */

